<resources>
    <string name="app_name">Kemu Sacco</string>
    <string name="action_settings">Settings</string>
    <string name="wait">Please Wait...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>

    <string name="id_number">ID Number</string>
    <string name="password">Password</string>
    <string name="newuser">New User? Register</string>

    <string name="email">Email</string>
    <string name="phone_no">Phone Number (07...)</string>
    <string name="retype_password">Confirm password</string>
    <string name="existing">Existing User?</string>

    <string name="contribution">Contributions</string>
    <string name="loans">Loans</string>
    <string name="add_contribution">Add Contribution</string>
    <string name="new_contribution">Add Contribution</string>
    <string name="contribution_type">Contribution Type</string>
    <string name="amount">Amount</string>
    <string name="date">Date Created</string>
    <string name="network_not_connected">No Internet Connection</string>
    <string name="successful_add_savings">Successfully made your contribution</string>
    <string name="successful_add_loans">Your loan application has been received successfully</string>
    <string name="successful_add_payments">Your loan payment has been received successfully</string>
    <string name="code">Mpesa Code</string>
    <string name="requestloan">Request Loan</string>
    <string name="payment_id">Payment Id</string>
    <string name="new_payment">New Payment</string>
    <string name="loan_type">Loan Type</string>
    <string name="loanpayment">Loan Payment</string>
    <string name="application">New User Application Form</string>
    <string name="kin">Nominated Next Of Kin</string>
    <string name="nextname">Full Name</string>
    <string name="relation">Relationship</string>
    <string name="dob">Date Of Birth</string>
    <string name="amounttext">Amount To Be Deducted Monthly</string>
    <string name="feed">Feedback</string>
    <string name="skip">Skip</string>
    <string name="network_error">Network error</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>
    <string name="next_of_kin">Next Of Kin</string>
    <string name="withdraw">Withdrawals </string>
    <string name="withdraw_id">Withdraw Id</string>
    <string name="newwithdraw">Withdraw</string>
    <string name="new_withdraw">Cash withdraw</string>
    <string name="contributions">Contributions</string>
    <string name="savings">Savings</string>
    <string name="deposits">Monthly Deposits</string>
    <string name="duration">Duration(months)</string>
    <string name="myaccount">My Account</string>

    <string-array name="contribution_types">
        <item>Education Fund</item>
        <item>Children Fund</item>
        <item>Christmas Fund</item>
        <item>Leave Fund</item>
        <item>Recreation Fund</item>
        <item>Retirement Fund</item>
         </string-array>

    <string name="allhelp">FAQs
i.	How to do contribution?
To make contribution you go to the shares and choose the type of contribution you want to make; either shares contribution or social, them enters the details as stated there.
ii.	How to request for loan?
To ask for loan go to loan session and shoes the type of loan you want then submit your request and wait for the admin to approve it.
iii.	Maximum amount of money a member can loan?
To repay the loan go to loan and click on loan repayment and do the payment.
iv.	How to repay loan?
To repay the loan go to loan and click on loan repayment and do the payment.


HELP
	To make contribution you go to the shares and choose the type of contribution you want to make; either shares contribution or social, them enters the details as stated there.
	To ask for loan go to loan session and shoes the type of loan you want then submit your request and wait for the admin to approve it.
	You can borrow three times the amount of shares you have contributed.
	To repay the loan go to loan and click on loan repayment and do the payment.
</string>
    <string name="help">Help</string>
</resources>
