<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@+id/cart_count"
            android:layout_margin="10dp"
            android:padding="@dimen/padding_small"
           />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:text="@string/contribution_type"
            android:textColor="@color/black"
            android:gravity="left|center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />


    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingRight="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small">



            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/collections_recycler"
                android:padding="@dimen/padding_small"
                android:layout_marginBottom="50dp">


            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_contribution"
                android:src="@drawable/ic_add_new_plus"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="40dp"
                android:layout_marginRight="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/add_contribution"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>








        </RelativeLayout>

</LinearLayout>