<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_medium"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/account" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/firstname"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/fname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/lastname"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/lname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/id_number"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/id"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/username"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/phone"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:layout_margin="@dimen/padding_medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

            </LinearLayout>




        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/padding_medium"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/next_of_kin"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/newkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_gravity="center"
        android:background="@drawable/rounder_small_blue"
        android:gravity="end"
        android:text="ADD KIN"
        android:visibility="gone"
        android:textColor="@color/white"

        />

</LinearLayout>
        <androidx.recyclerview.widget.RecyclerView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_kin"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</LinearLayout>
